--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
-  "name": "doggone",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^5.3.11",
+    "aws-sdk": "^2.1483.0",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.10.3",
+    "react-convert-to-image": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-ui-components-superflows": "^1.0.30",
+    "react-ui-themes-superflows": "^1.0.19",
+    "react-upload-to-s3": "^1.0.16",
+    "react-webcam": "^7.2.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
