--- a/amplify.yml
+++ b/amplify.yml
@@ -18,8 +18,8 @@ backend:
       commands:
         - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
-        - pip3 install --user pipenv
-        - amplifyPush --simple
+        # - pip3 install --user pipenv
+        # - amplifyPush --simple
         - pip3 install -r requirements.txt
     # IMPORTANT - Please verify your build output directory
     artifacts:
