--- a/amplify.yml
+++ b/amplify.yml
@@ -18,6 +18,7 @@ backend:
       commands:
         - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
+        - pip3 install --upgrade pip3
         # - pip3 install --user pipenv
         # - amplifyPush --simple
         - pip3 install pillow
