--- a/amplify.yml
+++ b/amplify.yml
@@ -14,13 +14,26 @@ frontend:
       - node_modules/**/*
 backend:
   phases:
+    preBuild:
+      commands:
+        - export BASE_PATH=$(pwd)
+        - yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.8-pip
+        - cd /opt && wget https://www.python.org/ftp/python/3.8.2/Python-3.8.2.tgz
+        - cd /opt && tar xzf Python-3.8.2.tgz 
+        - cd /opt/Python-3.8.2 && ./configure --enable-optimizations
+        - cd /opt/Python-3.8.2 && make altinstall
+        - pip3.8 install --user pipenv
+        - pip3.8 install --upgrade setuptools
+        - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
+        - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
+        - cd $BASE_PATH
     build:
       commands:
-        - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
-        - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
-        - pip3 install --upgrade pip3
-        # - pip3 install --user pipenv
-        # - amplifyPush --simple
+        # - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
+        # - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
+        # - pip install --upgrade pip
+        # # - pip3 install --user pipenv
+        # # - amplifyPush --simple
         - pip3 install pillow
     # IMPORTANT - Please verify your build output directory
     artifacts:
