--- a/amplify.yml
+++ b/amplify.yml
@@ -27,6 +27,7 @@ backend:
         - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
         - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         - cd $BASE_PATH
+        - pip install --upgrade pip
     build:
       commands:
         # - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
