--- a/amplify.yml
+++ b/amplify.yml
@@ -27,15 +27,16 @@ backend:
         # - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
         # - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         # - cd $BASE_PATH
-        - pip install --upgrade pip
+        # - pip install --upgrade pip
     build:
       commands:
         # - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         # - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
         # - pip install --upgrade pip
         # # - pip3 install --user pipenv
-        # # - amplifyPush --simple
-        - pip3 install pillow
+        # - amplifyPush --simple
+        - pipenv install pillow
+      
     # IMPORTANT - Please verify your build output directory
     artifacts:
       baseDirectory: .
